--- a/stylesgaleria.css
+++ b/stylesgaleria.css
@@ -77,7 +77,7 @@ nav a:hover {
   border: 5px solid #ddd;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(0 0 5px black);
 }
 
 .galeria .item img {
